# hackathon_be_itmo

./: .gitignore  docker-compose.yml  pyproject.toml
docker/: Dockerfile  run_server.sh
server/: alembic.ini
server/crud/: diagram.py
server/db/: database.py  models.py  settings.py
server/migrations/: env.py
server/migrations/versions/: 1197094762ef_nevers.py  31df55535b6a_nevers.py  84e199f9cb91_nevers.py  a35684f23dbb_nevers.py  ee9457e52d81_nevers.py
